--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin:0;
   padding:0;
   font-family: sans-serif;
@@ -22,4 +22,4 @@ body {
   color: white;
   cursor: pointer; 
   ;
-}
+} */
