--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -1,4 +1,4 @@
-/* body {
+body {
   margin:0;
   padding:0;
   font-family: sans-serif;
@@ -6,7 +6,7 @@
 .todo-title{
   cursor: pointer;
 }
-.complited-todo{
+.completed-todo{
   text-decoration:line-through ;
 }
 .tab-list > span{
@@ -22,4 +22,4 @@
   color: white;
   cursor: pointer; 
   ;
-} */
+}
