--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -3,10 +3,12 @@ body {
   padding:0;
   font-family: sans-serif;
 }
+
 .todo-title{
   font-size: 18px;
   cursor: pointer;
 }
+
 .completed-todo{
   text-decoration:line-through ;
 }
@@ -27,23 +29,6 @@ body {
   color: white;
 }
 
-/* .btn-add {
-  font-size: 18px;
-  border: 2px solid #2596be;
-  margin: 10px;
-  padding: 10px 20px;
-  border-radius: 20px;
-  background: transparent;
-  color: #2596be;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.btn-add:hover {
-  background: #2596be;
-  color: white;
-  border-color: #2596be;
-} */
 .btn-add {
   font-size: 18px;
   border: 2px dashed #007bff;
@@ -56,8 +41,7 @@ body {
 }
 
 .btn-add:hover {
-  background: #007bff; /* Une nuance plus sombre de bleu lors du survol */
+  background: #007bff; 
   border-color:#007bff;
   color: white;
-
 }
